--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,9 @@ NEW FEATURES
 * chemid() to query ChemIDplus http://chem.sis.nlm.nih.gov/chemidplus/.
 * is.inchikey() and is.cas() to check if a string is valid inchikey or CAS registry number.
 * parse_mol(): A simple molfile parser.
+* Functions to work with ChemSpider InChI API:
+  + cs_csid_mol : convert csid to mol
+  + is.inchikey_cs: Check is inchikey is valid
 
 
 MINOR IMPROVEMENTS
@@ -16,19 +19,20 @@ MINOR IMPROVEMENTS
 * alanwood() returns also subactvity (e.g. $Fluazinam$activity [1] "fungicides" and $Fluazinam$subactivity [1] "pyridine fungicides").
 * physprop() also returns boiling and melting points. Moreover, values are now numeric.
 
-RENAMING
-
-* ppdb() replaces ppdb_query() and accepts individual index as created by ppdb_buildidx().
-* cir() replaces cir_query().
-* cs_compinfo() replaces csid_compinfo()
-* cs_extcompinfo() replaces csid_extcompinfo()
-
 
 BUG FIXES
 
 * alanwood() returns only results for first match in case of multiple links found
 * physprop() stopped working after change of SRC to https, fixed now.
 * changed etox_* functions to https
+
+
+DEPRECATED FUNCTIONS
+
+* ppdb() replaces ppdb_query() and accepts individual index as created by ppdb_buildidx().
+* cir() replaces cir_query().
+* cs_compinfo() replaces csid_compinfo()
+* cs_extcompinfo() replaces csid_extcompinfo()
 
 
 DEFUNCT FUNCTIONS
