--- a/README.Rmd
+++ b/README.Rmd
@@ -316,5 +316,6 @@ Checkout our [contribution guide here](https://github.com/ropensci/webchem/blob/
 
 * Please [report any issues, bugs or feature requests](https://github.com/ropensci/webchem/issues).
 * License: MIT
+* Get citation information for `webchem` in R doing citation(package = 'webchem')
 
 [![ropensci](http://ropensci.org/public_images/github_footer.png)](http://ropensci.org)
