--- a/README.Rmd
+++ b/README.Rmd
@@ -128,6 +128,14 @@ head(mol$ab)
 Note that the Molfile is parsed into a R object (via `parse_mol()`).
 
 
+Convert InChIKes to CSID
+
+```{r cs_inchikey_csid}
+cs_inchikey_csid('BQJCRHHNABKAKU-KBQPJGBKSA-N', token = token)
+```
+
+
+
 #### PubChem
 
 Retrieve PubChem CID
