--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,7 @@ NEW FEATURES
 * parse_mol(): A simple molfile parser.
 * Functions to work with ChemSpider InChI API:
   + cs_csid_mol : convert csid to mol
+  + cs_inchikey_csid: convert inchikey to csid
   + is.inchikey_cs: Check is inchikey is valid
 * webchem has now a zenodo doi, please cite if you use it.
 
