--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,7 @@ NEW FEATURES
 * Functions to work with ChemSpider InChI API:
   + cs_csid_mol : convert csid to mol
   + cs_inchikey_csid: convert inchikey to csid
+  + cs_inchikey_inchi : convert inchikey to inchi
   + is.inchikey_cs: Check is inchikey is valid
 * webchem has now a zenodo doi, please cite if you use it.
 
