--- a/README.Rmd
+++ b/README.Rmd
@@ -131,15 +131,31 @@ Note that the Molfile is parsed into a R object (via `parse_mol()`).
 Convert InChIKey to CSID
 
 ```{r cs_inchikey_csid}
-cs_inchikey_csid('BQJCRHHNABKAKU-KBQPJGBKSA-N', token = token)
+cs_inchikey_csid('BQJCRHHNABKAKU-KBQPJGBKSA-N')
 ```
 
 
 Convert InChIKey to InChI
 
-```{r cs_inchikey_csid}
-cs_inchikey_inchi('BQJCRHHNABKAKU-KBQPJGBKSA-N', token = token)
+```{r cs_inchikey_inchi}
+cs_inchikey_inchi('BQJCRHHNABKAKU-KBQPJGBKSA-N')
 ```
+
+
+Convert InChiKey to MolFile
+
+```{r cs_inchikey_mol}
+mol2 <- cs_inchikey_mol('BQJCRHHNABKAKU-KBQPJGBKSA-N')
+head(mol2$ab)
+```
+
+
+Convert InChI to CSID
+
+```{r cs_inchi_csid, eval=FALSE}
+cs_inchi_csid('BQJCRHHNABKAKU-KBQPJGBKSA-N')
+```
+
 
 
 #### PubChem
@@ -330,6 +346,6 @@ Checkout our [contribution guide here](https://github.com/ropensci/webchem/blob/
 
 * Please [report any issues, bugs or feature requests](https://github.com/ropensci/webchem/issues).
 * License: MIT
-* Get citation information for `webchem` in R doing citation(package = 'webchem')
+* Get citation information for `webchem` in R doing `citation(package = 'webchem')`
 
 [![ropensci](http://ropensci.org/public_images/github_footer.png)](http://ropensci.org)
