--- a/NEWS
+++ b/NEWS
@@ -7,12 +7,13 @@ NEW FEATURES
 * is.inchikey() and is.cas() to check if a string is valid inchikey or CAS registry number.
 * parse_mol(): A simple molfile parser.
 * Functions to work with ChemSpider InChI API:
-  + cs_csid_mol : convert csid to mol
-  + cs_inchikey_csid : convert inchikey to csid
-  + cs_inchikey_inchi : convert inchikey to inchi
-  + cs_inchikey_mol : convert inchikey to Molfile
-  + cs_inchi_csid : convert inchi to csid
-  + is.inchikey_cs : Check is inchikey is valid
+  + cs_csid_mol() : convert csid to mol
+  + cs_inchikey_csid() : convert inchikey to csid
+  + cs_inchikey_inchi() : convert inchikey to inchi
+  + cs_inchikey_mol() : convert inchikey to Molfile
+  + cs_inchi_csid() : convert inchi to csid
+  + cs_inchi_inchikey : convert inchi to inchikey
+  + is.inchikey_cs() : Check via ChemSpider if inchikey is valid
 * webchem has now a zenodo doi, please cite if you use it.
 
 
