--- a/README.Rmd
+++ b/README.Rmd
@@ -155,6 +155,7 @@ Convert InChI to CSID, InChiKey
 ```{r cs_inchi_csid, eval=FALSE}
 cs_inchi_csid('BQJCRHHNABKAKU-KBQPJGBKSA-N')
 cs_inchi_inchikey('BQJCRHHNABKAKU-KBQPJGBKSA-N')
+cs_inchi_mol('BQJCRHHNABKAKU-KBQPJGBKSA-N')
 ```
 
 
