--- a/NEWS
+++ b/NEWS
@@ -14,6 +14,7 @@ NEW FEATURES
   + cs_inchi_csid() : convert inchi to csid
   + cs_inchi_inchikey : convert inchi to inchikey
   + cs_inchi_mol() : convert inchi to molfile
+  + cs_inchi_smiles() : convert inchi to smiles
   + is.inchikey_cs() : Check via ChemSpider if inchikey is valid
 * webchem has now a zenodo doi, please cite if you use it.
 
