--- a/README.Rmd
+++ b/README.Rmd
@@ -156,6 +156,7 @@ Convert InChI to CSID, InChiKey
 cs_inchi_csid('BQJCRHHNABKAKU-KBQPJGBKSA-N')
 cs_inchi_inchikey('BQJCRHHNABKAKU-KBQPJGBKSA-N')
 cs_inchi_mol('BQJCRHHNABKAKU-KBQPJGBKSA-N')
+cs_inchi_smiles('BQJCRHHNABKAKU-KBQPJGBKSA-N')
 ```
 
 
