--- a/NEWS
+++ b/NEWS
@@ -16,6 +16,7 @@ NEW FEATURES
   + cs_inchi_mol() : convert inchi to molfile
   + cs_inchi_smiles() : convert inchi to smiles
   + cs_smiles_inchi() : convert smiles to inchi
+  + These are all wrapped into cs_convert()
   + is.inchikey_cs() : Check via ChemSpider if inchikey is valid
 * webchem has now a zenodo doi, please cite if you use it.
 
