--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,17 @@
+webchem 0.0.5.0
+======================
+
+NEW FEATURES
+
+MINOR IMPROVEMENTS
+
+BUG FIXES
+
+DEPRECATED FUNCTIONS
+
+DEFUNCT FUNCTIONS
+
+
 webchem 0.0.4.0
 ======================
 
