--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,8 @@ webchem 0.0.5.0
 
 NEW FEATURES
 
+* get_wdid() to retrieve wikidata item ID.
+
 MINOR IMPROVEMENTS
 
 * webchem use exclusively xml2/httr/rvest (instead of XML)
