--- a/README.Rmd
+++ b/README.Rmd
@@ -45,6 +45,7 @@ Source | Function(s | API Docs | API key
 [ETOX](http://webetox.uba.de/webETOX/index.do) | `get_etoxid()`, `etox_basic()`. `etox_targets()`, `etox_tests()` | none | none
 [PPDB](http://sitem.herts.ac.uk/aeru/iupac/search.htm) | `ppdb()` | none | none
 [ChemIDplus](http://chem.sis.nlm.nih.gov/chemidplus/) | `chemid()` | none | none
+[Wikidata](https://www.wikidata.org/wiki/Wikidata:WikiProject_Chemistry) | `get_wdid()` | [link](https://www.mediawiki.org/wiki/API:Main_page) | none
 
 #### API keys
 ChemSpider functions require a security token. 
@@ -289,6 +290,13 @@ out <- chemid(query = 'Triclosan', type = 'name')
 out$physprop
 ```
 
+
+
+#### Wikidata
+```{r wikidata}
+ids <- get_wdid(query = 'Triclosan', language = 'en')
+ids
+```
 
 
 #### Misc functions
