--- a/NEWS
+++ b/NEWS
@@ -3,9 +3,11 @@ webchem 0.0.5.0
 
 NEW FEATURES
 
+* is.smiles() checks SMILES string, by parsing via (R)CDK.
+
 MINOR IMPROVEMENTS
 
-* webchem use exclusively xml2/httr/rvest (instead of XML)
+* webchem use exclusively xml2/httr/rvest (instead of XML).
 * cs_compinfo():
   - names of returned list changed
 * cs_extcompinfo():
@@ -15,6 +17,8 @@ MINOR IMPROVEMENTS
   - result is numeric where appropriate
 
 BUG FIXES
+
+* utility function are not vectorized and throw an error.
 
 DEPRECATED FUNCTIONS
 
