fix encoding error in ppdb

--- a/NEWS
+++ b/NEWS
@@ -22,6 +22,7 @@ BUG FIXES
 * utility function are not vectorized and throw an error.
 * chemid() did mot work with inchikey as input.
 * ppdb_idx returned duplicated CAS values, which caused ppdb() to fail.
+* ppdb() failed in some cases because of false encoding
 
 DEPRECATED FUNCTIONS
 
