--- a/README.Rmd
+++ b/README.Rmd
@@ -35,7 +35,7 @@ This package interacts with a suite of web APIs to retrieve chemical information
 
 Source | Function(s | API Docs | API key
 ------ | --------- | -------- | --------
-[Chemical Identifier Resolver (CIR)](http://cactus.nci.nih.gov/chemical/structure) | `cir()` | [link](http://cactus.nci.nih.gov/chemical/structure_documentation) | none
+[Chemical Identifier Resolver (CIR)](http://cactus.nci.nih.gov/chemical/structure) | `cir_query()` | [link](http://cactus.nci.nih.gov/chemical/structure_documentation) | none
 [ChemSpider](http://www.chemspider.com/) | `get_csid()`, `cs_compinfo()`, `cs_extcompinfo()` , `cs_convert()`, `cs_csid_mol()`, `cs_inchi_csid()`, `cs_inchi_inchikey()`, `cs_inchi_mol()`, `cs_inchi_smiles()`, `cs_smiles_inchi()`, `cs_inchikey_csid()`, `cs_inchikey_inchi()`, `cs_inchikey_mol()` `is.inchikey_cs()` | [link](http://www.chemspider.com/AboutServices.aspx?) | required [(link)](https://www.rsc.org/rsc-id/register )
 [PubChem](https://pubchem.ncbi.nlm.nih.gov/) | `get_cid()`, `cid_compinfo()` | [link](https://pubchem.ncbi.nlm.nih.gov/) | none
 [Chemical Translation Service (CTS)](http://cts.fiehnlab.ucdavis.edu/) | `cts_convert()`, `cts_compinfo()` | none | none
@@ -43,7 +43,7 @@ Source | Function(s | API Docs | API key
 [Alan Wood's Compendium of Pesticide Common Names](http://www.alanwood.net/pesticides/) | `alanwood()` | none | none
 [PHYSPROP Database](http://www.srcinc.com/what-we-do/environmental/scientific-databases.html) | `physprop()` | none | none
 [ETOX](http://webetox.uba.de/webETOX/index.do) | `get_etoxid()`, `etox_basic()`. `etox_targets()`, `etox_tests()` | none | none
-[PPDB](http://sitem.herts.ac.uk/aeru/iupac/search.htm) | `ppdb()` | none | none
+[PPDB](http://sitem.herts.ac.uk/aeru/iupac/search.htm) | `ppdb_query()` | none | none
 [ChemIDplus](http://chem.sis.nlm.nih.gov/chemidplus/) | `chemid()` | none | none
 [Wikidata](https://www.wikidata.org/wiki/Wikidata:WikiProject_Chemistry) | `get_wdid()`, `wd_ident()` | [link](https://www.mediawiki.org/wiki/API:Main_page) | none
 
@@ -77,21 +77,21 @@ library("webchem")
 CAS numbers and molecular weight for [Triclosan](http://en.wikipedia.org/wiki/Triclosan).
 Use `first` to return only the first hit.
 ```{r cir_query1}
-cir('Triclosan', 'cas')
-cir('Triclosan', 'cas', first = TRUE)
-cir('Triclosan', 'mw')
+cir_query('Triclosan', 'cas')
+cir_query('Triclosan', 'cas', first = TRUE)
+cir_query('Triclosan', 'mw')
 ```
 
 Query SMILES and InChIKey from CAS (Triclosan).
 Inputs might by ambiguous and we can specify where to search using `resolver=`.
 ```{r cir_query2}
-cir('3380-34-5', 'smiles')
-cir('3380-34-5', 'stdinchikey', resolver = 'cas_number')
+cir_query('3380-34-5', 'smiles')
+cir_query('3380-34-5', 'stdinchikey', resolver = 'cas_number')
 ```
 
 Query the number of rings using the InChiKey (Triclosan) 
 ```{r cir_query3}
-cir('XEFQLINVKFYRCS-UHFFFAOYSA-N', 'ring_count')
+cir_query('XEFQLINVKFYRCS-UHFFFAOYSA-N', 'ring_count')
 ```
 
 
@@ -272,7 +272,7 @@ The PPDB holds a lot of chemical and ecotoxicological information.
 In webchem we provide a function to query this database by a CAS number.
 
 ```{r ppdb}
-out <- ppdb('1071-83-6')
+out <- ppdb_query('1071-83-6')
 ```
 
 The information output is enormous, I show here only a small part, the countries where the compound is approved:
