--- a/README.Rmd
+++ b/README.Rmd
@@ -30,6 +30,9 @@ knitr::opts_chunk$set(
 `webchem` is a R package to retrieve chemical information from  the web. 
 This package interacts with a suite of web APIs to retrieve chemical information.
 
+The functions in the package that hit a specific API have a prefix and suffix separated by an underscore. 
+They follow the format of \texttt{source\_functionality}, e.g. \texttt{cs\_compinfo} uses ChemSpider to retrieve compound informations.
+
 
 ## Currently implemented in `webchem`
 
@@ -37,7 +40,7 @@ Source | Function(s | API Docs | API key
 ------ | --------- | -------- | --------
 [Chemical Identifier Resolver (CIR)](http://cactus.nci.nih.gov/chemical/structure) | `cir_query()` | [link](http://cactus.nci.nih.gov/chemical/structure_documentation) | none
 [ChemSpider](http://www.chemspider.com/) | `get_csid()`, `cs_compinfo()`, `cs_extcompinfo()` , `cs_convert()`, `cs_csid_mol()`, `cs_inchi_csid()`, `cs_inchi_inchikey()`, `cs_inchi_mol()`, `cs_inchi_smiles()`, `cs_smiles_inchi()`, `cs_inchikey_csid()`, `cs_inchikey_inchi()`, `cs_inchikey_mol()` `is.inchikey_cs()` | [link](http://www.chemspider.com/AboutServices.aspx?) | required [(link)](https://www.rsc.org/rsc-id/register )
-[PubChem](https://pubchem.ncbi.nlm.nih.gov/) | `get_cid()`, `cid_compinfo()` | [link](https://pubchem.ncbi.nlm.nih.gov/) | none
+[PubChem](https://pubchem.ncbi.nlm.nih.gov/) | `get_pcid()`, `pc_compinfo()` | [link](https://pubchem.ncbi.nlm.nih.gov/) | none
 [Chemical Translation Service (CTS)](http://cts.fiehnlab.ucdavis.edu/) | `cts_convert()`, `cts_compinfo()` | none | none
 [PAN Pesticide Database](http://www.pesticideinfo.org/) | `pan_query()` | none | none
 [Alan Wood's Compendium of Pesticide Common Names](http://www.alanwood.net/pesticides/) | `aw_query()` | none | none
@@ -178,14 +181,14 @@ cs_convert('BQJCRHHNABKAKU-KBQPJGBKSA-N', from = 'inchikey', to = 'csid')
 #### PubChem
 
 Retrieve PubChem CID
-```{r get_cid}
-get_cid('Triclosan')
-cid <- get_cid('3380-34-5')
+```{r get_pcid}
+get_pcid('Triclosan')
+cid <- get_pcid('3380-34-5')
 ```
 
 Use this CID to retrieve some chemical properties:
-```{r cid_compinfo}
-props <- cid_compinfo(cid)
+```{r pc_compinfo}
+props <- pc_compinfo(cid)
 props$InChIKey
 props$MolecularWeight
 props$IUPACName
