--- a/README.Rmd
+++ b/README.Rmd
@@ -209,10 +209,17 @@ ETOX: Information System Ecotoxicology and Environmental Quality Targets is a da
 First we need to query a substance ID:
 
 ```{r get_etoxid}
-id <- get_etoxid('Triclosan')
+id <- get_etoxid('Triclosan', mult = 'best')
 id
 ```
-`get_etoxid` tries to find the best match for you (check the matched and distance attributes))
+`get_etoxid` tries to find the best match for you (check the matched and distance attributes), if multiple hits are found.
+Other options are `mult = 'ask'` to enter a interactive mode, `'na'` to return `NA`, `'all'` to return all hits and `'first'` to return the first hit.
+
+```{r}
+get_etoxid('Triclosan', mult = 'all')
+```
+
+
 
 With this substance ID we can query further information from ETOX, e.g.:
 
