--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ NEW FEATURES
 
 * is.smiles() checks SMILES string, by parsing via (R)CDK.
 * get_wdid() and wd_indent() to retrieve information from wikidata.
+* get_etoxid() can handle multi inputs (interactive mode, best match, first match, NA and all matches)
 
 MINOR IMPROVEMENTS
 
