--- a/NEWS
+++ b/NEWS
@@ -28,6 +28,7 @@ BUG FIXES
 * ppdb_idx returned duplicated CAS values, which caused ppdb() to fail.
 * ppdb() failed in some cases because of false encoding.
 * etox_*() functions are more robust.
+* ci_query() failed if multi hits were found. Now returns first hit.
 
 DEPRECATED FUNCTIONS
 
