--- a/NEWS
+++ b/NEWS
@@ -5,23 +5,22 @@ NEW FEATURES
 
 * is.smiles() checks SMILES string, by parsing via (R)CDK.
 * get_wdid() and wd_indent() to retrieve information from wikidata.
-* get_etoxid() can handle multi inputs (interactive mode, best match, first match, NA and all matches)
-* ci_query() can handle multi inputs (interactive mode, best match, first match and NA)
+* get_etoxid() can handle multi inputs (interactive mode, best match, first match, NA and all matches).
+* ci_query() can handle multi inputs (interactive mode, best match, first match and NA).
 
 MINOR IMPROVEMENTS
 
-* webchem uses exclusively xml2 (instead of XML)
-* cs_compinfo():
-  - names of returned list changed
+* webchem uses exclusively xml2 (instead of XML).
+* cs_compinfo(): names of returned list changed.
 * cs_extcompinfo():
   - names of returned list changed
   - result is numeric where appropriate
-* cir():
-  - result is numeric where appropriate
+* cir(): result is numeric where appropriate.
 * unified naming scheme.
 * withdraw naming changes in V0.0.4 (ppdb, cir).
-* is.inchikey_cs has been integrated into is.inchikey.
+* is.inchikey_cs() has been integrated into is.inchikey().
 * aw_query() returns multiple inchikey if found.
+* pan() now returns chemical name and matched synonym. Value have appropriate class.
 
 BUG FIXES
 
