aw return source_url

--- a/NEWS
+++ b/NEWS
@@ -19,8 +19,8 @@ MINOR IMPROVEMENTS
 * unified naming scheme.
 * withdraw naming changes in V0.0.4 (ppdb, cir).
 * is.inchikey_cs() has been integrated into is.inchikey().
-* aw_query() returns multiple inchikey if found.
-* pan() now returns chemical name and matched synonym. Value have appropriate class.
+* aw_query() returns multiple inchikey if found and source_url is returned.
+* pan() now returns chemical name and matched synonym. Values have appropriate class and source_url is returned.
 
 BUG FIXES
 
