added source ulr to chemspider, updated readme, fixed etox

--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,7 @@ webchem 0.0.5.0
 
 NEW FEATURES
 
-* is.smiles() checks SMILES string, by parsing via (R)CDK.
+* is.smiles() checks SMILES strings, by parsing via (R)CDK.
 * get_wdid() and wd_indent() to retrieve information from wikidata.
 * get_etoxid() can handle multi inputs (interactive mode, best match, first match, NA and all matches).
 * ci_query() can handle multi inputs (interactive mode, best match, first match and NA).
@@ -11,21 +11,20 @@ NEW FEATURES
 MINOR IMPROVEMENTS
 
 * webchem uses exclusively xml2 (instead of XML).
+* All function return source_url for (micro-)attribution of sources
 * cs_compinfo(): names of returned list changed.
 * cs_extcompinfo():
   - names of returned list changed
   - result is numeric where appropriate
 * cir(): result is numeric where appropriate.
-* unified naming scheme.
-* withdraw naming changes in V0.0.4 (ppdb, cir).
+* unified naming scheme of functions.
 * is.inchikey_cs() has been integrated into is.inchikey().
-* aw_query() returns multiple inchikey if found and source_url is returned.
-* pan() now returns chemical name and matched synonym. Values have appropriate class and source_url is returned.
-* ci_query() returns source_url.
+* aw_query() returns multiple inchikey if found.
+* pan() now returns chemical name and matched synonym.
 
 BUG FIXES
 
-* utility function are not vectorized and throw an error.
+* utility functions are not vectorized and throw an error.
 * chemid() did mot work with inchikey as input.
 * ppdb_idx returned duplicated CAS values, which caused ppdb() to fail.
 * ppdb() failed in some cases because of false encoding.
