--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,7 @@ NEW FEATURES
 * get_wdid() and wd_indent() to retrieve information from wikidata.
 * get_etoxid() can handle multi inputs (interactive mode, best match, first match, NA and all matches).
 * ci_query() can handle multi inputs (interactive mode, best match, first match and NA).
+* cs_prop() queries predcitions (ACD and EPiSuite) from ChemSpider
 
 MINOR IMPROVEMENTS
 
