--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,8 @@ webchem 0.0.6
 
 NEW FEATURES
 * added cts_to() and cts_from() to retrieve possible ids that can be queried.
+* cts_* functions can handle multiple inputs
+
 
 
 webchem 0.0.5.0
